# itmo_home_task

./: .dockerignore  .editorconfig  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  entrypoint.sh  main.py  poetry.toml  pyproject.toml  setup.cfg
.github/workflows/: cicd.yml  release.yml  test.yml
migrations/: env.py  utils.py
migrations/versions/: 20221011133901_create_pgcrypto_extension.py  20221011141202_added_teams_table.py  20221012095821_added_models_table.py  20221013105316_added_trials_table.py  20221013135507_added_metrics_table.py  20221019221640_added_tokens_table.py  20231017224319_remove_team_titles.py
requestor/: app.py  events.py  log.py  models.py  services.py  settings.py  utils.py
requestor/assessor/: __init__.py  service.py
requestor/bot/: __init__.py  bot.py  bot_utils.py  commands.py  constants.py  create_bot.py  events.py  exceptions.py  handlers.py
requestor/db/: __init__.py  db.py  exceptions.py  models.py  service.py
requestor/google/: __init__.py  google.py  service.py
requestor/gunner/: __init__.py  exceptions.py  metrics.py  service.py
scripts/: generate_token.py
tests/: conftest.py  helpers.py  utils.py
tests/assessor/: test_service.py
tests/db/: test_service.py
tests/google/: test_service.py
tests/gunner/: test_service.py
